Allow for user song list (#9281)

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,6 @@ id_rsa_*
 __pycache__
 # prerequisites for updating ChibiOS
 /util/fmpp*
+
+# Allow to exist but don't include it in the repo
+user_song_list.h
